// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CarouselSection stories snapshot > CarouselOnly story renders and matches snapshot 1`] = `
<div
  class="section-container py-6"
>
  <div
    aria-label="Demo carousel"
    aria-roledescription="carousel"
    class="relative w-full py-6"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 items-stretch flex-nowrap"
        role="list"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            1
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            2
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            3
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            4
          </div>
        </div>
      </div>
    </div>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex left-0 lg:-translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-previous"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Previous slide
      </span>
    </button>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex right-0 lg:translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-next"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <span
        class="sr-only"
      >
        Next slide
      </span>
    </button>
  </div>
</div>
`;

exports[`CarouselSection stories snapshot > CenterTitleWithSubtitle story renders and matches snapshot 1`] = `
<div
  class="section-container py-6"
>
  <div
    class="text-center"
  >
    <h2
      class="text-4xl font-medium leading-none tracking-[-0.9px] text-foreground mb-4"
    >
      Shop by category
    </h2>
    <p
      class="text-base font-normal leading-6 text-muted-foreground max-w-2xl mx-auto"
    >
      Explore our collections
    </p>
  </div>
  <div
    aria-label="Categories carousel"
    aria-roledescription="carousel"
    class="relative w-full py-6"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 items-stretch flex-nowrap"
        role="list"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            1
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            2
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            3
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            4
          </div>
        </div>
      </div>
    </div>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex left-0 lg:-translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-previous"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Previous slide
      </span>
    </button>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex right-0 lg:translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-next"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <span
        class="sr-only"
      >
        Next slide
      </span>
    </button>
  </div>
</div>
`;

exports[`CarouselSection stories snapshot > LeftTitleWithShopAll story renders and matches snapshot 1`] = `
<div
  class="section-container py-6"
>
  <div
    class="flex items-center justify-between"
  >
    <div>
      <h2
        class="text-4xl font-medium leading-none tracking-[-0.9px] text-foreground"
      >
        Featured
      </h2>
      <p
        class="text-sm text-muted-foreground mt-1"
      >
        Hand-picked for you
      </p>
    </div>
    <div>
      <a
        class="text-sm font-medium text-primary hover:text-primary/80 transition-colors shrink-0 ml-4"
        data-discover="true"
        href="/RefArchGlobal/en-GB/category/root"
      >
        Shop all
      </a>
    </div>
  </div>
  <div
    aria-label="Featured carousel"
    aria-roledescription="carousel"
    class="relative w-full py-6"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 items-stretch flex-nowrap"
        role="list"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            1
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            2
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            3
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            4
          </div>
        </div>
      </div>
    </div>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex left-0 lg:-translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-previous"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Previous slide
      </span>
    </button>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex right-0 lg:translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-next"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <span
        class="sr-only"
      >
        Next slide
      </span>
    </button>
  </div>
</div>
`;

exports[`CarouselSection stories snapshot > LongCopy story renders and matches snapshot 1`] = `
<div
  class="section-container py-6"
>
  <div
    class="flex items-center justify-between"
  >
    <div>
      <h2
        class="text-4xl font-medium leading-none tracking-[-0.9px] text-foreground"
      >
        A Substantially Longer Section Heading That Tests Whether the Title Row Reflows Cleanly Alongside the Shop-All Link
      </h2>
      <p
        class="text-sm text-muted-foreground mt-1"
      >
        A multi-sentence subtitle that exercises the secondary line under the title — long enough to wrap to several lines and verify the spacing between heading, subtitle, and the carousel track below.
      </p>
    </div>
    <div>
      <a
        class="text-sm font-medium text-primary hover:text-primary/80 transition-colors shrink-0 ml-4"
        data-discover="true"
        href="/RefArchGlobal/en-GB/category/root"
      >
        Shop the entire editorial collection
      </a>
    </div>
  </div>
  <div
    aria-label="Featured carousel"
    aria-roledescription="carousel"
    class="relative w-full py-6"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 items-stretch flex-nowrap"
        role="list"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            1
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            2
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            3
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            4
          </div>
        </div>
      </div>
    </div>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex left-0 lg:-translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-previous"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Previous slide
      </span>
    </button>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex right-0 lg:translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-next"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <span
        class="sr-only"
      >
        Next slide
      </span>
    </button>
  </div>
</div>
`;

exports[`CarouselSection stories snapshot > Playground story renders and matches snapshot 1`] = `
<div
  class="section-container py-6"
>
  <div
    class="flex items-center justify-between"
  >
    <div>
      <h2
        class="text-4xl font-medium leading-none tracking-[-0.9px] text-foreground"
      >
        Featured
      </h2>
      <p
        class="text-sm text-muted-foreground mt-1"
      >
        Hand-picked for you
      </p>
    </div>
    <div>
      <a
        class="text-sm font-medium text-primary hover:text-primary/80 transition-colors shrink-0 ml-4"
        data-discover="true"
        href="/RefArchGlobal/en-GB/category/root"
      >
        Shop all
      </a>
    </div>
  </div>
  <div
    aria-label="Featured carousel"
    aria-roledescription="carousel"
    class="relative w-full py-6"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 items-stretch flex-nowrap"
        role="list"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            1
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            2
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            3
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            4
          </div>
        </div>
      </div>
    </div>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex left-0 lg:-translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-previous"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Previous slide
      </span>
    </button>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex right-0 lg:translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-next"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <span
        class="sr-only"
      >
        Next slide
      </span>
    </button>
  </div>
</div>
`;

exports[`CarouselSection stories snapshot > ShopAllLabelWithoutLink story renders and matches snapshot 1`] = `
<div
  class="section-container py-6"
>
  <div
    class="flex items-center justify-between"
  >
    <h2
      class="text-4xl font-medium leading-none tracking-[-0.9px] text-foreground"
    >
      New arrivals
    </h2>
    <div>
      <span
        class="text-sm font-medium text-primary shrink-0 ml-4"
      >
        View all
      </span>
    </div>
  </div>
  <div
    aria-label="New arrivals carousel"
    aria-roledescription="carousel"
    class="relative w-full py-6"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 items-stretch flex-nowrap"
        role="list"
      >
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            1
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            2
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            3
          </div>
        </div>
        <div
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-1/2 pl-4 sm:basis-1/3 md:basis-1/4"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="flex h-28 min-w-0 items-center justify-center rounded-none border border-border bg-muted text-sm"
          >
            Slide 
            4
          </div>
        </div>
      </div>
    </div>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex left-0 lg:-translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-previous"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      <span
        class="sr-only"
      >
        Previous slide
      </span>
    </button>
    <button
      class="items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 absolute rounded-full top-1/2 -translate-y-1/2 flex right-0 lg:translate-x-1/2 size-9 shadow-md"
      data-size="icon"
      data-slot="carousel-next"
      data-variant="outline"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <span
        class="sr-only"
      >
        Next slide
      </span>
    </button>
  </div>
</div>
`;
